--- a/src/style.css
+++ b/src/style.css
@@ -9,5 +9,5 @@
 }
 
 .badge {
-    @apply bg-yellow-100 twxt-xl uppercase font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2;
+    @apply bg-yellow-100 text-xl uppercase font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2;
 }
