--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,7 @@
 .badge {
     @apply bg-yellow-100 text-xl uppercase font-bold rounded-2xl p-2 absolute top-0 ml-2 mt-2;
 }
+
+.btn {
+    @apply rounded-full py-2 px-3 uppercase font-bold cursor-pointer
+}
